apply max-width to client-slider to avoid it scaling out of view port

--- a/wordpress/wp-content/themes/xenon-group-2015/styles/sass/_objects.scss
+++ b/wordpress/wp-content/themes/xenon-group-2015/styles/sass/_objects.scss
@@ -927,6 +927,10 @@
       }
     }  
 
+.clients-slider {
+  max-width: 100%;
+  //margin: -5px -10px;
+}
 
 .our-clients {
 }
